# aurora_practice_project

./: .gitignore  .metadata  README.md  aurora-aarch64.cmake  gcc-wrapper.sh  gxx-wrapper.sh  latest.json  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/aurora_practice_project/: MainActivity.kt
assets/models/: model_float16.tflite  model_float32.tflite  model_int8.tflite
aurora/: CMakeLists.txt
aurora/desktop/: com.example.aurora_practice_project.desktop
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/services/: model_loader.dart  voice_service.dart
lib/theme/: colors.dart  typography.dart
lib/views/: root_screen.dart
lib/views/home/: home_screen.dart
lib/views/performance/: performance_screen.dart
lib/views/settings/: settings_screen.dart
lib/widgets/: audio_level_indicator.dart  badge_widget.dart  button_widget.dart  card_widget.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
plugins/ffi_plugin/: .metadata  LICENSE  README.md  ffigen.yaml  pubspec.yaml
plugins/ffi_plugin/aurora/: CMakeLists.txt
plugins/ffi_plugin/example/: pubspec.yaml
plugins/ffi_plugin/example/lib/: main.dart
plugins/ffi_plugin/lib/: ffi_loader.dart  ffi_plugin.dart  ffi_plugin_bindings_generated.dart
plugins/ffi_plugin/src/: CMakeLists.txt  ffi_plugin.cpp  ffi_plugin.h
rpm/: aurora_flutter_app.spec
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
